// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectRefinementList getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "refinementList": Object {
    "facetAttribute": Array [
      "value",
    ],
  },
}
`;

exports[`connectRefinementList getWidgetState should not override other values in the same namespace 1`] = `
Object {
  "refinementList": Object {
    "facetAttribute": Array [
      "value",
    ],
    "otherFacetAttribute": Array [
      "val",
    ],
  },
}
`;
